SERVER-13311 Improve error message for bad numerical values in YAML config